# modular-flow-shop-scheduler

./: .gitattributes  LICENSE.md  README.md
app/: .gitmodules  Makefile  Manifest.toml  Project.toml  README.md  app.jl  pyproject.toml
app/config/: flow-shop.schema.json  modulariser.schema.json  test-schemas.py
app/data/: .gitignore
app/doc/: .gitignore  conf.py  index.rst
app/inputs/: duplex_size.fs.yaml  modular_duplex_0.fs.yaml
app/inputs/modular/deadlines/: bookletAB.fs.yaml
app/inputs/modular/modulariser/: simple_0.mfs.yaml  simple_1.mfs.yaml
app/inputs/modular/synthetic/: 1.fs.yaml  2.fs.yaml  3.fs.yaml  4.fs.yaml
app/inputs/modular/test/: 1.fs.yaml
app/models/: .gitignore  README.md  pyproject.toml
app/models/src/: cpModelProductionLine.py  model.py
app/models/src/utils/: flowshop.py  xmlparser.py
app/modfs/: __init__.py  __main__.py
app/modfs/data/: result_load.py
app/modfs/runner/: __init__.py  input.py
app/modfs/runner/tasks/: runner.py
app/modfs/utils/: __init__.py  config_loader.py  graph.py  info_file.py  plotting.py
app/notebooks/: analysis.ipynb  graph.ipynb  modular_bounds.ipynb
app/notebooks/papers/: distributed_scheduling.ipynb
app/notebooks/papers/distributed-scheduling/: analysis.ipynb
app/notebooks/papers/modular-scheduling/: paper.ipynb
app/notebooks/presentations/: mascot_2023_10_10.ipynb  poster_es_day_2023_11_02.ipynb  uc_2024_05_24.ipynb
app/scheduler/: .editorconfig  .gitignore  .gitlab-ci.yml  LICENSE.md  README.md
app/scheduler/benchmarks/: .gitignore
app/scheduler/benchmarks/test_problems/maintenance/: maintproperties.xml  result1_0.xml  result1_1.xml
app/scheduler/benchmarks/test_problems/modular/: mixed_plexity_no_end.xml
app/scheduler/benchmarks/test_problems/simple/: 0.seq.json  0.xml  1.seq.json  1.xml  2.seq.json  2.xml  README.md
app/scheduler/scheduler/: .clang-tidy  .gdbinit  .gitignore  CMakeLists.txt  CMakePresets.json
app/scheduler/scheduler/app/: CMakeLists.txt  main.cpp
app/scheduler/scheduler/config/: CPM.cmake  Dockerfile  Dockerfile.old  profiling.cmake  revision.cmake  sequence.schema.json  windeployqt.cmake
app/scheduler/scheduler/config/gdb/: pretty_print.py
app/scheduler/scheduler/doc/: CMakeLists.txt  heuristic.tex  metrics.pptx  subset-benchmark.xlsx  windowed.tex
app/scheduler/scheduler/doc/doxygen/: custom.css  custom.js  header.html
app/scheduler/scheduler/experiments/: branchbound.py  compare_inputs.py  compare_makespans.py  compare_runtimes.py  compare_sweep_experiments.py  cplex_hoirzon_experiment.py  experiment.py  experiment2.py  experiment_fwd _mixed.py  experiment_fwd.py  extract_lowerbounds_new_cplex.py  extract_window_statistics.py  gather_experiment2_data.py  generate_cplex_models.py  latexify.py  verify.py
app/scheduler/scheduler/flowshopvis/: CMakeLists.txt  activitywidget.cpp  activitywidget.hpp  flowshopvismainwindow.cpp  flowshopvismainwindow.hpp  flowshopvismainwindow.ui  flowshopwidget.cpp  flowshopwidget.hpp  main.cpp
app/scheduler/scheduler/flowshopvis/generic_widgets/: expandable_scroll_area.cpp  expandable_scroll_area.hpp
app/scheduler/scheduler/flowshopvis/graph/: basic_graphwidget.cpp  basic_graphwidget.hpp  dot_parser.cpp  dot_parser.hpp  edge.cpp  edge.hpp  graphwidget.cpp  graphwidget.hpp  graphwidget_no_flowshop.cpp  graphwidget_no_flowshop.hpp  node.cpp  node.hpp
app/scheduler/scheduler/flowshopvis/production_line/: bounds_model.cpp  bounds_model.hpp  module_bounds_widget.cpp  module_bounds_widget.hpp  production_line_bounds_widget.cpp  production_line_bounds_widget.hpp  production_line_graph_widget.cpp  production_line_graph_widget.hpp  production_line_widget.cpp  production_line_widget.hpp
app/scheduler/scheduler/flowshopvis/resources/: resources.qrc
app/scheduler/scheduler/flowshopvis/src/: activitywidget.cpp  activitywidget.hpp  flowshopvismainwindow.cpp  flowshopvismainwindow.hpp  flowshopvismainwindow.ui  flowshopwidget.cpp  flowshopwidget.hpp  main.cpp  solver_worker.cpp  solver_worker.hpp
app/scheduler/scheduler/include/: cyclefinder.h  delay.h  environmentalselectionoperator.h  fmsscheduler.h  fmsschedulerexception.h  geometricselectionoperator.h  longest_path.h  maintenanceheuristic.h  negativecyclefinder.h  nofixedordersolution.h  paretocull.h  partialsolution.h  repairschedule.h  schedulingoption.h
app/scheduler/scheduler/include/DD/: comparator.hpp  dd_solution.hpp  vertex.hpp
app/scheduler/scheduler/include/FORPFSSPSD/: FORPFSSPSD.h  aliases.hpp  boundary.hpp  bounds.hpp  export_utilities.hpp  global_local_mapper.hpp  indices.hpp  maintenance_policy.hpp  module.hpp  operation.h  parsers.hpp  plexity.hpp  problem_update.hpp  production_line.hpp  xmlParser.h
app/scheduler/scheduler/include/delayGraph/: builder.hpp  delayGraph.h  edge.h  exportStrings.hpp  export_utilities.h  vertex.h
app/scheduler/scheduler/include/fms/: delay.hpp  scheduler.hpp  scheduler_exception.hpp  versioning.hpp
app/scheduler/scheduler/include/math/: interval.hpp
app/scheduler/scheduler/include/pch/: containers.hpp  utils.hpp
app/scheduler/scheduler/src/: CMakeLists.txt  cyclefinder.cpp  environmentalselectionoperator.cpp  fmsscheduler.cpp  geometricselectionoperator.cpp  longest_path.cpp  maintenanceheuristic.cpp  negativecyclefinder.cpp  paretocull.cpp  partialsolution.cpp  repairschedule.cpp  scheduler.cpp
app/scheduler/scheduler/test/: CMakeLists.txt  algorithm_selection.cpp  asapst_test.cc  backtrack_test.cc  bhcs.cc  bound_translate.cpp  branchbound_test.cc  cycle_test.cc  dd.cpp  environmentalselectiontest.cc  graph_builder.cpp  graph_test.cc  instance_generator.cc  instance_generator.h  json.cpp  logger.cc  logger.cpp  main.cc  main.cpp  maintenance.cc  maintenance.cpp  modular_test.cc  pareto_test.cc  sequence.cpp  simple_scheduler.cpp  timers.cpp  types.cpp  xml_parsing.cpp
app/scripts/: save_experiments.py  save_experiments.sh
app/src/: FMSScripts.jl
app/src/data/: FlowShop.jl
app/src/generator/: Algorithms.jl  Generator.jl  Specification.jl
app/src/utils/: ConfigLoader.jl
config/: cp-solver.sh
(+295 files in other folders)
